navbar overlapping issue fixed

--- a/src/Styles/Styles.scss
+++ b/src/Styles/Styles.scss
@@ -6,7 +6,7 @@
     background-color: white;
     border-bottom: 1px solid rgba(128, 128, 128, 0.325);
     position: relative;
-    z-index: 1;
+    z-index: 20;
 
     .navbar-page-navigations-links {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
